# murmur

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  test_buggy.py  test_render.py  test_render_100k.py  test_render_10k.py
examples/: coffee.py  ribs.py  summer_games.py
murmur/: __init__.py  __main__.py  cli.py
murmur/audio/: __init__.py  analyzer.py  features.py
murmur/core/: __init__.py  config.py  pipeline.py  pipeline_v2.py
murmur/output/: __init__.py  writer.py
murmur/rendering/: __init__.py  colormap.py  effects.py  generator.py  palette.py
murmur/simulation/: __init__.py  abstractions.py  advection.py  attractor.py  lenia.py  noise.py  physarum.py  physarum_glitch.py  spheres.py  veins.py
murmur/v2/: __init__.py  engine.py  init_geometry.py  palette.py  render.py  symmetry.py
