[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "murmur"
version = "0.1.0"
description = "Audio-reactive abstract art generator — organic, flowing GIFs from a song, a color, and a vibe"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "librosa>=0.10",
    "Pillow>=10.0",
    "imageio[ffmpeg]>=2.31",
    "noise>=1.2.2",
    "numba>=0.57",
    "click>=8.1",
    "tqdm>=4.65",
]

[project.scripts]
murmur = "murmur.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["murmur*"]
